--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Alexandre Noguez",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^8.13.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
