--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0"
   },
